files_and_output/input_xyz.output
Terminais sem uso na gramática

    '+'
    '-'
    '*'
    '/'


Gramática

    0 $accept: program $end

    1 program: block

    2 block: T_VAR decl_list
    3      | %empty

    4 decl_list: decl ';'
    5          | decl ',' decl_list

    6 decl: T_ID ':' type '=' value

    7 type: T_F64
    8     | T_I64
    9     | T_BOOL
   10     | T_CHAR
   11     | T_STR

   12 value: T_FALSE
   13      | T_TRUE
   14      | T_INT
   15      | T_REAL
   16      | T_STRING
   17      | T_CHARACTER


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '*' (42)
    '+' (43)
    ',' (44) 5
    '-' (45)
    '/' (47)
    ':' (58) 6
    ';' (59) 4
    '=' (61) 6
    error (256)
    T_F64 (258) 7
    T_I64 (259) 8
    T_BOOL (260) 9
    T_CHAR (261) 10
    T_STR (262) 11
    T_VAR (263) 2
    T_ID <str> (264) 6
    T_INT <val.i64> (265) 14
    T_REAL <val.f64> (266) 15
    T_TRUE <val.b> (267) 13
    T_FALSE <val.b> (268) 12
    T_STRING <val.str> (269) 16
    T_CHARACTER <val.ch> (270) 17


Não terminais com as regras onde eles aparecem

    $accept (24)
        à esquerda: 0
    program (25)
        à esquerda: 1
        à direita: 0
    block (26)
        à esquerda: 2 3
        à direita: 1
    decl_list (27)
        à esquerda: 4 5
        à direita: 2 5
    decl (28)
        à esquerda: 6
        à direita: 4 5
    type <typ> (29)
        à esquerda: 7 8 9 10 11
        à direita: 6
    value <val> (30)
        à esquerda: 12 13 14 15 16 17
        à direita: 6


Estado 0

    0 $accept: • program $end

    T_VAR  deslocar, e ir ao estado 1

    $padrão  reduzir usando a regra 3 (block)

    program  ir ao estado 2
    block    ir ao estado 3


Estado 1

    2 block: T_VAR • decl_list

    T_ID  deslocar, e ir ao estado 4

    decl_list  ir ao estado 5
    decl       ir ao estado 6


Estado 2

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 7


Estado 3

    1 program: block •

    $padrão  reduzir usando a regra 1 (program)


Estado 4

    6 decl: T_ID • ':' type '=' value

    ':'  deslocar, e ir ao estado 8


Estado 5

    2 block: T_VAR decl_list •

    $padrão  reduzir usando a regra 2 (block)


Estado 6

    4 decl_list: decl • ';'
    5          | decl • ',' decl_list

    ';'  deslocar, e ir ao estado 9
    ','  deslocar, e ir ao estado 10


Estado 7

    0 $accept: program $end •

    $padrão  aceitar


Estado 8

    6 decl: T_ID ':' • type '=' value

    T_F64   deslocar, e ir ao estado 11
    T_I64   deslocar, e ir ao estado 12
    T_BOOL  deslocar, e ir ao estado 13
    T_CHAR  deslocar, e ir ao estado 14
    T_STR   deslocar, e ir ao estado 15

    type  ir ao estado 16


Estado 9

    4 decl_list: decl ';' •

    $padrão  reduzir usando a regra 4 (decl_list)


Estado 10

    5 decl_list: decl ',' • decl_list

    T_ID  deslocar, e ir ao estado 4

    decl_list  ir ao estado 17
    decl       ir ao estado 6


Estado 11

    7 type: T_F64 •

    $padrão  reduzir usando a regra 7 (type)


Estado 12

    8 type: T_I64 •

    $padrão  reduzir usando a regra 8 (type)


Estado 13

    9 type: T_BOOL •

    $padrão  reduzir usando a regra 9 (type)


Estado 14

   10 type: T_CHAR •

    $padrão  reduzir usando a regra 10 (type)


Estado 15

   11 type: T_STR •

    $padrão  reduzir usando a regra 11 (type)


Estado 16

    6 decl: T_ID ':' type • '=' value

    '='  deslocar, e ir ao estado 18


Estado 17

    5 decl_list: decl ',' decl_list •

    $padrão  reduzir usando a regra 5 (decl_list)


Estado 18

    6 decl: T_ID ':' type '=' • value

    T_INT        deslocar, e ir ao estado 19
    T_REAL       deslocar, e ir ao estado 20
    T_TRUE       deslocar, e ir ao estado 21
    T_FALSE      deslocar, e ir ao estado 22
    T_STRING     deslocar, e ir ao estado 23
    T_CHARACTER  deslocar, e ir ao estado 24

    value  ir ao estado 25


Estado 19

   14 value: T_INT •

    $padrão  reduzir usando a regra 14 (value)


Estado 20

   15 value: T_REAL •

    $padrão  reduzir usando a regra 15 (value)


Estado 21

   13 value: T_TRUE •

    $padrão  reduzir usando a regra 13 (value)


Estado 22

   12 value: T_FALSE •

    $padrão  reduzir usando a regra 12 (value)


Estado 23

   16 value: T_STRING •

    $padrão  reduzir usando a regra 16 (value)


Estado 24

   17 value: T_CHARACTER •

    $padrão  reduzir usando a regra 17 (value)


Estado 25

    6 decl: T_ID ':' type '=' value •

    $padrão  reduzir usando a regra 6 (decl)
